canvas that draws what you typed

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@ Some default input text is in here right now.
 	Please read with sincerity
 		</textarea>
 	</div>
+	<span id="random">random text</span>
 
 	<script type="text/javascript" charset="utf-8" src="./jquery-1.4.1.js"></script>
+	<script type="text/javascript" charset="utf-8" src="./main.js"></script>
 </body>
 </html>
