since we're loading jquery into textarea, remove default text

--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
 		<canvas id="view" width="100px" height="300px"></canvas>
 	</div>
 	<div id="inputArea">
-		<textarea id="text">
-Some default input text is in here right now.
-
-	Please read with sincerity
-		</textarea>
+		<textarea id="text"></textarea>
 	</div>
 
-	<script type="text/javascript" charset="utf-8" src="./jquery-1.4.1.js"></script>
+	<br class="clear" />
+
+	<script rel="jquery" type="text/javascript" charset="utf-8" src="./jquery-1.4.1.js"></script>
 	<script type="text/javascript" charset="utf-8" src="./main.js"></script>
 </body>
 </html>
