--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="./main.css" type="text/css" media="screen" charset="utf-8">
 </head>
 <body>
-	<h1>Zooming Canvas Test</h1>
+	<h1>Zooming Canvas</h1>
 
 	<div id="canvasDiv">
 		<canvas id="view" width="100px" height="300px"></canvas>
