--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 <body>
 	<h1>Zooming Canvas</h1>
 
-	<div id="canvasDiv">
-		<canvas id="view" width="200px" height="300px"></canvas>
-	</div>
+	<div id="canvasDiv"></div>
 	<div id="inputArea">
 		<textarea id="text"></textarea>
 	</div>
