refactored code into jquery plugin

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<br class="clear" />
 
 	<script rel="jquery" type="text/javascript" charset="utf-8" src="./jquery-1.4.1.js"></script>
+	<script type="text/javascript" charset="utf-8" src="./minimap.js"></script>
 	<script type="text/javascript" charset="utf-8" src="./main.js"></script>
 </body>
 </html>
