--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="./main.css" type="text/css" media="screen" charset="utf-8">
 </head>
 <body>
-	<h1>Zooming Canvas</h1>
+	<h1 id="title">Zooming Canvas</h1>
 
 	<div id="canvasDiv"></div>
 	<div id="inputArea">
