charset stuff not necessary

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 	<br class="clear" />
 
-	<script rel="jquery" type="text/javascript" charset="utf-8" src="./jquery-1.4.1.js"></script>
-	<script type="text/javascript" charset="utf-8" src="./minimap.js"></script>
-	<script type="text/javascript" charset="utf-8" src="./main.js"></script>
+	<script rel="jquery" type="text/javascript" src="./jquery-1.4.1.js"></script>
+	<script type="text/javascript" src="./minimap.js"></script>
+	<script type="text/javascript" src="./main.js"></script>
 </body>
 </html>
