broke up detect font size to it's own file

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<br class="clear" />
 
 	<script rel="jquery" type="text/javascript" src="./js/jquery-1.4.1.js"></script>
+	<script rel="jquery" type="text/javascript" src="./js/jquery.detectfontsize.js"></script>
 	<script type="text/javascript" src="./js/minimap.js"></script>
 	<script type="text/javascript" src="./js/main.js"></script>
 </body>
