moved minimap to jquery.minimap.js

--- a/demo.html
+++ b/demo.html
@@ -16,7 +16,7 @@
 
 	<script rel="jquery" type="text/javascript" src="./js/jquery-1.4.1.js"></script>
 	<script rel="jquery" type="text/javascript" src="./js/jquery.detectFontSize.js"></script>
-	<script type="text/javascript" src="./js/minimap.js"></script>
+	<script type="text/javascript" src="./js/jquery.minimap.js"></script>
 	<script type="text/javascript" src="./js/main.js"></script>
 </body>
 </html>
