added a link to the code on github

--- a/demo.html
+++ b/demo.html
@@ -5,7 +5,13 @@
 	<link rel="stylesheet" href="./main.css" type="text/css" media="screen" charset="utf-8">
 </head>
 <body>
-	<h1 id="title">Zooming Canvas</h1>
+	<div id="header">
+		<h1>Zooming Canvas</h1>
+		<p id="info">
+			<a href="http://github.com/zhaoz/jQuery-minimap">Code [Github]</a>
+		</p>
+		<br class="clear" />
+	</div>
 
 	<div id="canvasDiv"></div>
 	<div id="inputArea">
