--- a/demo.html
+++ b/demo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Zooming canvas</title>
+	<title>Text minimap</title>
 	<link rel="stylesheet" href="./main.css" type="text/css" media="screen" charset="utf-8">
 </head>
 <body>
