--- a/demo.html
+++ b/demo.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div id="header">
-		<h1>Zooming Canvas</h1>
+		<h1>Text minimap</h1>
 		<p id="info">
 			<a href="http://github.com/zhaoz/jQuery-minimap">Code [Github]</a>
 		</p>
